<?xml version="1.0"?>
<package format="3">
  <name>s7spaceship_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for Sigma7 spaceship bridge</description>

  <maintainer email="emreartar1@gmail.com">Emre Artar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Only if you used Option B -->
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
